<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:text="@string/welcome_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:text="Login to continue"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:background="@drawable/background_input"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:background="@drawable/background_input"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            />
        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:padding="@dimen/_10ssp"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/create_new_account"
            />

    </LinearLayout>

</ScrollView>